Implement un-HAPI tests for TokenAssociateToAccountHandler
Signed-off-by: Michael Heinrichs <netopyr@users.noreply.github.com>