@@ -21,7 +21,6 @@ import static com.hedera.services.bdd.spec.queries.QueryVerbs.getAccountInfo;
 import static com.hedera.services.bdd.spec.queries.QueryVerbs.getContractInfo;
 import static com.hedera.services.bdd.spec.transactions.TxnUtils.suFrom;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.SUCCESS;
-import static java.util.stream.Collectors.toList;
 
 import com.google.common.base.MoreObjects;
 import com.hedera.node.app.hapi.fees.usage.TxnUsageEstimator;
@@ -33,7 +32,13 @@ import com.hedera.services.bdd.spec.queries.contract.HapiGetContractInfo;
 import com.hedera.services.bdd.spec.queries.crypto.HapiGetAccountInfo;
 import com.hedera.services.bdd.spec.transactions.HapiTxnOp;
 import com.hedera.services.bdd.spec.transactions.TxnUtils;
-import com.hederahashgraph.api.proto.java.*;
+import com.hederahashgraph.api.proto.java.HederaFunctionality;
+import com.hederahashgraph.api.proto.java.Key;
+import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
+import com.hederahashgraph.api.proto.java.TokenAssociateTransactionBody;
+import com.hederahashgraph.api.proto.java.Transaction;
+import com.hederahashgraph.api.proto.java.TransactionBody;
+import com.hederahashgraph.api.proto.java.TransactionResponse;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -44,6 +49,8 @@ import org.apache.logging.log4j.Logger;
 
 public class HapiTokenAssociate extends HapiTxnOp<HapiTokenAssociate> {
     static final Logger log = LogManager.getLogger(HapiTokenAssociate.class);
+
+    public static final long DEFAULT_FEE = 100_000_000L;
 
     private String account;
     private List<String> tokens = new ArrayList<>();
@@ -82,7 +89,7 @@ public class HapiTokenAssociate extends HapiTxnOp<HapiTokenAssociate> {
             return spec.fees()
                     .forActivityBasedOp(HederaFunctionality.TokenAssociateToAccount, metricsCalc, txn, numPayerKeys);
         } catch (Throwable ignore) {
-            return 100_000_000L;
+            return DEFAULT_FEE;
         }
     }
 
@@ -138,14 +145,15 @@ public class HapiTokenAssociate extends HapiTxnOp<HapiTokenAssociate> {
 
     @Override
     protected Consumer<TransactionBody.Builder> opBodyDef(HapiSpec spec) throws Throwable {
-        var aId = TxnUtils.asId(account, spec);
         TokenAssociateTransactionBody opBody = spec.txns()
                 .<TokenAssociateTransactionBody, TokenAssociateTransactionBody.Builder>body(
                         TokenAssociateTransactionBody.class, b -> {
-                            b.setAccount(aId);
+                            if (account != null) {
+                                b.setAccount(TxnUtils.asId(account, spec));
+                            }
                             b.addAllTokens(tokens.stream()
                                     .map(lit -> TxnUtils.asTokenId(lit, spec))
-                                    .collect(toList()));
+                                    .toList());
                         });
         return b -> b.setTokenAssociate(opBody);
     }
